# okr-app

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 4c6faf33302e_create_objectives_and_key_results_tables.py
backend/src/okr_api/: create_app.py  db.py  models.py  models2.py  run_server.py
backend/src/okr_api/endpoints/: key_results.py  objectives.py  sample.py
backend/tests/: test_schema.py
db/: data.sql  init_prod.sql  init_staging.sql  schema.sql
frontend/: Dockerfile  app.py  key_result_item.py  key_result_item_creation_ui.py  key_result_item_edit.py  key_result_item_v2.py  key_result_item_view.py  key_result_to_add_to_objective.py  key_results_card.py  knowledge_base.py  objectives_state.py  pyproject.toml
